# robustrankaggregpy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  pyproject.toml  tox.ini
.github/workflows/: build_publish.yml  lint_test.yml
docs/source/: conf.py  index.rst
docs/source/api_reference/: api_index.rst
src/robustrankaggregpy/: __init__.py  aggregate_ranks.py
tests/: test_aggregate_ranks.py
